--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="start_here">Start Here</string>
     <string name="btn_day">Day 1</string>
     <string name="time">5 mins</string>
+    <string name="healthy_mind">A Healthy Mind</string>
+    <string name="evening_meditation">Evening Meditations</string>
 </resources>
